moved logic to service and repo layer